--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "photo-album",
+  "homepage": "https://motagit.github.io/photo-album/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
+    "react-loader-spinner": "^4.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -20,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
